<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_white_card"
    android:minWidth="200dp"
    android:minHeight="100dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_dialog_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_margin="8dp"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txt_dialog_title"
        android:layout_margin="8dp"
        android:hint="@string/str_title_of_stream"
        android:singleLine="true"
        android:text="@string/str_defualt_title_of_stream" />

    <ScrollView
        android:id="@+id/scroll_view_content_text"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/edit_input_name"
        android:layout_margin="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_input_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view_content_text"
        android:layout_alignParentRight="true"
        android:layout_margin="16dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txt_dialog_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="@string/str_cancel"
            android:textColor="@color/selector_primary_click"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_dialog_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:clickable="true"
            android:text="@string/str_sure"
            android:textColor="@color/selector_primary_click"
            android:textSize="16sp" />

    </LinearLayout>

</RelativeLayout>