<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_bucket"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@id/btn_refresh"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="left|center_vertical"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_bucket"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.6"
                android:gravity="center"
                android:hint="@string/str_default_bucket"
                android:singleLine="true"
                android:textSize="12sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="."
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatSpinner
                android:id="@+id/spinner_region"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4"
                android:entries="@array/region_name"
                android:gravity="center"
                android:prompt="@string/str_region"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="."
                android:textSize="12sp" />

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edit_domain_proxy_suffix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal|bottom"
                android:hint="@string/str_domain_proxy_suffix"
                android:minWidth="120dp"
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.AppCompatImageButton
        android:id="@+id/btn_refresh"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_margin="5dp"
        android:background="@android:color/transparent"
        android:scaleType="centerInside"
        android:src="@android:drawable/ic_menu_search" />
</RelativeLayout>